--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -15,3 +15,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE : true
+          SHOW_TOTAL: true
+          TIME_RANGE: "last_30_days"
+          BLOCKS: "⣀⣄⣤⣦⣶⣷⣿"
